# kleiner-brauhelfer-app

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  kleiner-brauhelfer-app.pro
kleiner-brauhelfer-app/: CMakeLists.txt  images.qrc  kleiner-brauhelfer-app.pro  languages.qrc  qml.qrc  qtquickcontrols2.conf
kleiner-brauhelfer-app/android/: AndroidManifest.xml
kleiner-brauhelfer-app/android/src/org/kleinerbrauhelfer/app/: PathUtil.java
kleiner-brauhelfer-app/languages/: kb_app_en.qm  kb_app_en.ts
kleiner-brauhelfer-app/qml/: Config.qml  Defines.qml  Footer.qml  Header.qml  NavMenu.qml  NavMenuDivider.qml  NavMenuItem.qml  PageTestarea.qml  main.qml
kleiner-brauhelfer-app/qml/common/: ButtonBase.qml  Chart.qml  CheckBoxBase.qml  ComboBoxBase.qml  FloatingButton.qml  HorizontalDivider.qml  LabelDate.qml  LabelDateTime.qml  LabelHeader.qml  LabelNumber.qml  LabelPlato.qml  LabelPrim.qml  LabelSec.qml  LabelSubheader.qml  LabelUnit.qml  MouseAreaCatcher.qml  PageBase.qml  PopupBase.qml  PopupPlato.qml  PopupRestextrakt.qml  PopupWeitereZutatenGaben.qml  RadioButtonBase.qml  SpinBoxReal.qml  SwitchBase.qml  TextAreaBase.qml  TextFieldBase.qml  TextFieldDate.qml  TextFieldDateTime.qml  TextFieldNumber.qml  TextFieldPlato.qml  TextFieldSre.qml  TextFieldSw.qml  TextFieldTemperature.qml  TextFieldVolume.qml  Toast.qml  VerticalDivider.qml
kleiner-brauhelfer-app/qml/pagesGlobal/: PageGlobalAuswahl.qml  PageGlobalEquipment.qml  PageGlobalHops.qml  PageGlobalIngredients.qml  PageGlobalMalt.qml  PageGlobalUebersicht.qml  PageGlobalWater.qml  PageGlobalYeast.qml
kleiner-brauhelfer-app/qml/pagesOthers/: PageAbout.qml  PageSettings.qml
kleiner-brauhelfer-app/qml/pagesSud/: PageSudAbfuellen.qml  PageSudBewertung.qml  PageSudBrauen.qml  PageSudGaerung.qml  PageSudGaerverlauf_1.qml  PageSudGaerverlauf_2.qml  PageSudGaerverlauf_3.qml  PageSudHome.qml  PageSudInfo.qml
kleiner-brauhelfer-app/qml/pagesTools/: PageToolBieranalyse.qml  pageToolCrossMix.qml
kleiner-brauhelfer-app/src/: languageselector.cpp  languageselector.h  main.cpp  qmlutils.cpp  qmlutils.h  sortfilterproxymodel.cpp  sortfilterproxymodel.h  sortfilterproxymodelsud.cpp  sortfilterproxymodelsud.h  syncservice.cpp  syncservice.h  syncservicedropbox.cpp  syncservicedropbox.h  syncservicegoogle.cpp  syncservicegoogle.h  syncservicelocal.cpp  syncservicelocal.h  syncservicemanager.cpp  syncservicemanager.h  syncservicewebdav.cpp  syncservicewebdav.h
kleiner-brauhelfer-core/: CMakeLists.txt  brauhelfer.h  database.cpp  database_defs.h  kleiner-brauhelfer-core.pro  modelausruestung.cpp  modelausruestung.h  modelhopfen.cpp  modelmalz.cpp  modelmalzschuettung.cpp  modelsud.cpp  modelsud.h  modelwasser.cpp  modelweiterezutaten.cpp  modelweiterezutatengaben.cpp  proxymodelsud.cpp  proxymodelsud.h  sudobject.cpp  sudobject.h
kleiner-brauhelfer-core/src/: biercalc.cpp  biercalc.h  brauhelfer.cpp  brauhelfer.h  database.cpp  database.h  database_defs.h  modelausruestung.cpp  modelausruestung.h  modelbewertungen.cpp  modelbewertungen.h  modelhauptgaerverlauf.cpp  modelhauptgaerverlauf.h  modelhefe.cpp  modelhefe.h  modelhopfen.cpp  modelhopfen.h  modelmalz.cpp  modelmalz.h  modelnachgaerverlauf.cpp  modelnachgaerverlauf.h  modelrasten.cpp  modelrasten.h  modelschnellgaerverlauf.cpp  modelschnellgaerverlauf.h  modelsud.cpp  modelsud.h  modelwasser.cpp  modelwasser.h  modelweiterezutaten.cpp  modelweiterezutaten.h  modelweiterezutatengaben.cpp  modelweiterezutatengaben.h  proxymodel.cpp  proxymodel.h  proxymodelstockpile.cpp  proxymodelstockpile.h  proxymodelsud.cpp  proxymodelsud.h  sqltablemodel.cpp  (+7 more)
qtdropbox2/: AUTHORS.md  README.md  qtdropbox2.pri  qtdropbox2.pro
qtdropbox2/src/: qdropbox2.cpp  qdropbox2.h  qdropbox2account.cpp  qdropbox2account.h  qdropbox2common.h  qdropbox2entity.h  qdropbox2entityinfo.cpp  qdropbox2entityinfo.h  qdropbox2file.cpp  qdropbox2file.h  qdropbox2folder.cpp  qdropbox2folder.h  qdropbox2global.h
